main/bin/main.79855.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:236:33: error: use of undeclared identifier 'inf_queue'
                        int c = inf_queue[StateT[index].current];
                                ^
1 warning and 1 error generated.
